// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Active 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--medium muncher-button--active"
    data-title="Active Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--medium"
    data-title="Default Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Disabled 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--medium"
    data-title="Disabled Button"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Icon Button 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--small"
    data-title="Icon Button"
    disabled={false}
    type="button"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Large 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--large"
    data-title="Large Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Nav Button 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--nav muncher-button--medium"
    data-title="Nav Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Rounded Button 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--secondary muncher-button--small muncher-button--rounded"
    data-title="Rounded Button"
    disabled={false}
    type="button"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Secondary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--secondary muncher-button--medium"
    data-title="Secondary Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Small 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--small"
    data-title="Small Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Submit 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--medium"
    data-title="Submit Button"
    disabled={false}
    type="submit"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Tertiary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <button
    className="muncher-button muncher-button--tertiary muncher-button--medium"
    data-title="Tertiary Button"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Active 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--medium muncher-button--active"
      data-title="Active DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--medium"
      data-title="Default Dropdown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Disabled 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--medium"
      data-title="Disabled DropDown"
      disabled={true}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Icon Dropdown 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--small"
      data-title="Icon dropdown text"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <svg
        className="muncher-icon muncher-icon--small"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="4"
        />
        <line
          x1="16"
          x2="16"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="2"
          y2="6"
        />
        <line
          x1="7"
          x2="17"
          y1="10"
          y2="10"
        />
        <line
          x1="7"
          x2="17"
          y1="14"
          y2="14"
        />
        <line
          x1="7"
          x2="17"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Large 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--large"
      data-title="Large DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Rounded Dropdown 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--secondary muncher-button--large muncher-button--rounded"
      data-title="Rounded dropdown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <svg
        className="muncher-icon muncher-icon--large"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="4"
        />
        <line
          x1="16"
          x2="16"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="2"
          y2="6"
        />
        <line
          x1="7"
          x2="17"
          y1="10"
          y2="10"
        />
        <line
          x1="7"
          x2="17"
          y1="14"
          y2="14"
        />
        <line
          x1="7"
          x2="17"
          y1="18"
          y2="18"
        />
      </svg>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Secondary 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--secondary muncher-button--medium"
      data-title="Secondary DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button Small 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--small"
      data-title="Small DropDown"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Button With Text 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown"
  >
    <button
      className="muncher-button muncher-button--medium"
      data-title="DropDown with text"
      disabled={false}
      onMouseDown={[Function]}
      type="button"
    >
      <p>
        Text drop down
      </p>
    </button>
    
  </div>
</div>
`;

exports[`Storyshots Buttons/Dropdown Nav Button Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-dropdown-nav"
  >
    <button
      className="muncher-button muncher-button--nav muncher-button--medium"
      data-title="Default Nav Dropdown"
      disabled={false}
      type="button"
    >
      <p>
        drop down 
        <span
          className="small"
        >
          ▼
        </span>
      </p>
    </button>
    <div
      className="muncher-dropdown-nav--content"
    >
      <p>
        Drop down content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Display/Badge Default 1`] = `
<div
  style={
    Object {
      "maxWidth": "7rem",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-badge"
  >
    Muncher  
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="7"
        x2="17"
        y1="10"
        y2="10"
      />
      <line
        x1="7"
        x2="17"
        y1="14"
        y2="14"
      />
      <line
        x1="7"
        x2="17"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Data Display/Pill Default 1`] = `
<div
  className="muncher-pill"
>
  <div
    className="close"
    onClick={[Function]}
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="15"
        x2="9"
        y1="9"
        y2="15"
      />
      <line
        x1="9"
        x2="15"
        y1="9"
        y2="15"
      />
    </svg>
  </div>
  <div
    className="content"
  >
     
     Item 1
  </div>
</div>
`;

exports[`Storyshots Feedback/Backdrop Default 1`] = `
<div
  className="muncher-backdrop"
  onClick={[Function]}
/>
`;

exports[`Storyshots Feedback/Modal Default 1`] = `
<div
  style={
    Object {
      "background": "#f5f5f5",
      "padding": "2rem",
    }
  }
>
  <div
    className="muncher-backdrop"
    onClick={[Function]}
  />
  <div
    className="muncher-modal"
    style={
      Object {
        "opacity": "1",
        "transform": "translateY(0)",
      }
    }
  >
    <h2>
      Modal title
    </h2>
    <section>
      Modal Mody
    </section>
  </div>
</div>
`;

exports[`Storyshots Input/Checkbox Default 1`] = `
<div
  className="muncher-input--div"
>
  <div
    className="muncher-checkbox"
  >
    <input
      checked={false}
      name="muncher-checkbox"
      onChange={[Function]}
      required={false}
      type="checkbox"
    />
    <label
      htmlFor="muncher-checkbox"
    >
      Item 1
      
    </label>
  </div>
</div>
`;

exports[`Storyshots Input/File Input Default 1`] = `
<div
  className="muncher-file-input--div"
>
  <label
    className="muncher-button muncher-button--secondary muncher-button--large"
    htmlFor="file"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="3"
      />
      <circle
        cx="8.5"
        cy="8.5"
        r="1.5"
      />
      <polyline
        points="21 15 16 10 5 21"
      />
    </svg>
     
    upload file
    <span
      className="required"
    >
       *
    </span>
  </label>
  <span
    className="span-file-name"
  />
  <input
    className="muncher-file-input"
    id="file"
    multiple={false}
    onChange={[Function]}
    required={true}
    type="file"
  />
</div>
`;

exports[`Storyshots Input/Input Color 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="color"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Date 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="date"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Date Time 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="datetime-local"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Default 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Email 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
      />
      <polyline
        points="22,6 12,13 2,6"
      />
    </svg>
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Email"
      type="email"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Month 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="month"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Number 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    <svg
      className="muncher-icon muncher-icon--small"
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20"
        rx="2"
        ry="2"
        width="14"
        x="5"
        y="2"
      />
      <line
        x1="12"
        x2="12.01"
        y1="18"
        y2="18"
      />
    </svg>
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Phone number"
      type="number"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Password 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type password"
      type="password"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Range 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="range"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Search 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="search"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Tel 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="tel"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Text With Icon 1`] = `
<div
  className="muncher-input--div"
>
  <label
    htmlFor="query"
  >
    Search
    <span
      className="required"
    >
      *
    </span>
  </label>
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      required={true}
      type="text"
      withIcon={true}
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Text With Label 1`] = `
<div
  className="muncher-input--div"
>
  <label
    htmlFor="query"
  >
    Search
    <span
      className="required"
    >
      *
    </span>
  </label>
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      required={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Time 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="time"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Url 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="type url"
      type="url"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Input Week 1`] = `
<div
  className="muncher-input--div"
>
  
  <div
    className="muncher-input-element"
  >
    
    <input
      autoComplete="off"
      autoFocus={false}
      className="muncher-input"
      name="query"
      placeholder="Type your query"
      type="week"
    />
  </div>
</div>
`;

exports[`Storyshots Input/Radio Default 1`] = `
<div
  className="muncher-input--div"
>
  <div
    className="muncher-radio"
  >
    <input
      checked={false}
      name="muncher-radio"
      onChange={[Function]}
      type="radio"
    />
    <label
      htmlFor="muncher-radio"
    >
      radio
      
    </label>
  </div>
</div>
`;

exports[`Storyshots Input/Range Slider Default 1`] = `
<div
  className="muncher-slider"
>
  <div
    className="rc-slider"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="rc-slider-rail"
      style={Object {}}
    />
    <div
      className="rc-slider-track rc-slider-track-1"
      style={
        Object {
          "left": "0%",
          "right": "auto",
          "width": "100%",
        }
      }
    />
    <div
      className="rc-slider-step"
    />
    <div
      aria-disabled={false}
      aria-valuemax={1100}
      aria-valuemin={10}
      aria-valuenow={10}
      className="rc-slider-handle rc-slider-handle-1"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="slider"
      style={
        Object {
          "left": "0%",
          "right": "auto",
          "transform": "translateX(-50%)",
        }
      }
      tabIndex={0}
    />
    <div
      aria-disabled={false}
      aria-valuemax={1100}
      aria-valuemin={10}
      aria-valuenow={1100}
      className="rc-slider-handle rc-slider-handle-2"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="slider"
      style={
        Object {
          "left": "100%",
          "right": "auto",
          "transform": "translateX(-50%)",
        }
      }
      tabIndex={0}
    />
    <div
      className="rc-slider-mark"
    />
  </div>
  <div
    className="muncher-slider-content"
  >
    This is a range slider
  </div>
</div>
`;

exports[`Storyshots Input/Text Input Dropdown Default 1`] = `
<div
  className="muncher-input-drop-down"
>
  <div
    className="muncher-input--div"
  >
    
    <div
      className="muncher-input-element"
    >
      
      <input
        autoComplete="off"
        autoFocus={true}
        className="muncher-input"
        name="query"
        onChange={[Function]}
        placeholder="Start typing.."
        type="text"
      />
    </div>
  </div>
  
</div>
`;

exports[`Storyshots Input/Text area Default 1`] = `
<div
  className="muncher-input--div"
>
  
  <textarea
    autoFocus={false}
    className="muncher-textarea"
    maxLength={1000}
    name="question"
    onChange={[Function]}
    placeholder="Type your question"
    readOnly={false}
    rows={6}
  />
  <p>
    1000
     characters left
  </p>
</div>
`;

exports[`Storyshots Utils/DataTitle Default 1`] = `
<a
  data-title="This will show up on hover"
  href="#home"
>
  Hover here
</a>
`;

exports[`Storyshots Utils/Spinner Default 1`] = `
<div
  className="muncher-spinner"
/>
`;

exports[`Storyshots Utils/Star Default 1`] = `
<span
  className="muncher-star "
  style={
    Object {
      "--r": 3.4,
    }
  }
/>
`;

exports[`Storyshots Visual/Icons Dark 1`] = `
<svg
  className="muncher-icon muncher-icon--medium"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Default 1`] = `
<svg
  className="muncher-icon muncher-icon--small"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Large 1`] = `
<svg
  className="muncher-icon muncher-icon--large"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;

exports[`Storyshots Visual/Icons Medium 1`] = `
<svg
  className="muncher-icon muncher-icon--medium"
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth={2}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="18"
    rx="2"
    ry="2"
    width="18"
    x="3"
    y="4"
  />
  <line
    x1="16"
    x2="16"
    y1="2"
    y2="6"
  />
  <line
    x1="8"
    x2="8"
    y1="2"
    y2="6"
  />
  <line
    x1="7"
    x2="17"
    y1="10"
    y2="10"
  />
  <line
    x1="7"
    x2="17"
    y1="14"
    y2="14"
  />
  <line
    x1="7"
    x2="17"
    y1="18"
    y2="18"
  />
</svg>
`;
